5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1807_2567.log
== TEST (2019-06-13 04:36:46) 
-- CODE:
base = int(input("base do desenho: "))

for i in range(0, base):
	for i in range(0, base -j):
		print("*", end ="")
	print("\n", end ="")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    for i in range(0, base -j):
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 04:37:00) 
-- CODE:
base = int(input("base do desenho: "))

for i in range(0, base):
	for j in range(0, base -j):
		print("*", end ="")
	print("\n", end ="")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    for j in range(0, base -j):
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 04:37:23) 
-- CODE:
base = int(input("base do desenho: "))

for j in range(0, base):
	for i in range(0, base -j):
		print("*", end ="")
	print("\n", end ="")
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 04:39:30) 
-- CODE:
base = int(input("base do desenho: "))

for ast in range(0, base):
	for i in range(0, base -ast):
		print("*", end ="")
	print("\n", end ="")
for ast in range(0, base):
	for i in range(0, base +ast):
		print("*", end ="")
	print("\n", end ="")

-- OUTPUT:
********
*******
******
*****
****
***
**
*
********
*********
**********
***********
************
*************
**************
***************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 04:41:17) 
-- CODE:
base = int(input("base do desenho: "))

for ast in range(0, base):
	for i in range(0, base -ast):
		print("*", end ="")
	print("\n", end ="")
for ast in range(0, base):
	for i in range(0, ast+1):
		print("*", end ="")
	print("\n", end ="")

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 04:41:35) 
-- CODE:
base = int(input("base do desenho: "))

for ast in range(0, base):
	for i in range(0, base -ast):
		print("*", end ="")
	print("\n", end ="")
for ast in range(0, base):
	for i in range(0, ast+1):
		print("*", end ="")
	print("\n", end ="")

-- EXECUTION TIME:
0.794807
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
